# observatory

./: .gitattributes  .gitignore  00-project-overview.md  01-harvest-register.md  02-boundaries.md  ACTIVE_CONTEXT.md  AGENTS.md  FOLDER_README_TEMPLATE.md  LLM_START_HERE.md  NEXT_SESSION_HANDOFF.md  POST_V1_DATABASE_ROADMAP.md  README.md  REPO_MAP.md  ROADMAP.md  ROADMAP_RULES.md  pyproject.toml
archive/: CLAUDE_START_HERE.md  README.md
audits/: README.md  full-repo-audit-2026-07-07.md  m7-audit-report-2026-07-07.md  observatory-db1-through-db4-full-independent-audit.md  observatory-db4-drift-correction-and-completion-plan.md  observatory-post-m13-deep-audit-2026-07-12.md  observatory-post-v1-pre-database-deep-audit-2026-07-12.md
contracts/: README.md  capturepackage-v0-1.md  claim-safety.md  consumer-promotion.md  contract-template.md  evidence-id-citation.md  freshness-staleness-volatility.md  overlay.md  owned-telemetry-overlay-proof-v0-1.md  provider-cross-check-proof-v0-1.md  provider-cross-check.md  provider-testimony.md  query-panel.md  raw-archive-provider-drift.md  scope-rights-retention.md  searchclarity-consumer-placeholder.md  searchclarity-proof-workflow-v0-1.md  typed-read-api-mcp-v0-1.md  typed-read-tool-skeleton.md
database/: README.md  db4-remediation-conformance-manifest.json
decisions/: 2026-07-07-audits-folder.md  2026-07-07-m2-folder-subset.md  2026-07-10-m10-schema-planning-closure.md  2026-07-10-m11-foundation-closure.md  2026-07-10-m12-first-slice-closure.md  2026-07-10-m7-closure.md  2026-07-10-m8-closure.md  2026-07-10-m9-first-slice-closure.md  2026-07-11-m13-dataforseo-controlled-probe-approval.md  2026-07-12-db1-contract-corrections-and-database-boundary-rulings.md  2026-07-12-m13-closure-and-m14-activation.md  2026-07-12-m13-dataforseo-exploratory-campaign.md  2026-07-12-m14-closure-and-m15-activation.md  2026-07-12-m14-contract-and-read-boundary-rulings.md  2026-07-12-m14-typed-read-contract-acceptance-and-prototype-authorization.md  2026-07-12-m15-closure-and-m16-activation.md  2026-07-12-m15-searchclarity-contract-and-consumer-boundary-rulings.md  2026-07-12-m15-searchclarity-fixture-proof-authorization.md  2026-07-12-m16-closure-and-m17-activation.md  2026-07-12-m16-provider-cross-check-contract-and-rulings.md  2026-07-12-m16-provider-cross-check-fixture-proof-authorization.md  2026-07-12-m17-closure-and-m18-activation.md  2026-07-12-m17-owned-telemetry-overlay-contract-and-rulings.md  2026-07-12-m17-owned-telemetry-overlay-fixture-proof-authorization.md  2026-07-12-m18-watch-panel-policy-and-m19-activation.md  2026-07-12-m19-bounded-backup-restore-proof-authorization.md  2026-07-12-m19-closure-and-m20-activation.md  2026-07-12-m19-hardening-backup-recovery-rulings.md  2026-07-12-observatory-v1-acceptance.md  2026-07-12-post-v1-audit-acceptance-and-db-roadmap-activation.md  2026-07-12-provider-evidence-folder-and-c00-sanitized-preservation.md  2026-07-13-database-phase-recovery-to-db1.md  2026-07-13-db1-closure-and-db2-activation.md  2026-07-13-db2-closure-and-db3-activation.md  2026-07-13-db3-closure-and-db4-activation.md  2026-07-14-db2-freeze-acceptance-and-db3-planning-authorization.md  2026-07-14-db3-acceptance-closure-and-db4-package-preparation.md  2026-07-14-db4-audit-acceptance-and-remediation-activation.md  2026-07-14-db4-package-acceptance-and-phased-implementation-authorization.md  2026-07-14-db4-remediation-implementation-authorization.md  (+12 more)
hammers/: README.md  acceptance-gate-policy-v0-1.md  acceptance-gate-policy-v0-2.md  hammer-matrix-v0-1.md  hammer-matrix-v0-2.md  per-hammer-result-register-v0-1.md
planning-inbox/: README.md  (+128 more)
(+183 files in other folders)
