[project]
name = "observatory-c2"
version = "0.0.0"
description = "Local-only C2 Controlled Public Manual Observation Package validation spine for The Observatory."
requires-python = ">=3.11"
dependencies = []

[tool.observatory]
status = "db3-planning-last-trusted-db2"
first_slice = "C2 Controlled Public Manual Observation Package"
probe = "M13 DataForSEO one-shot tooling retained and disarmed"
campaign = "M13 closed; no additional provider request authorized"
campaign_budget_usd = 50
network_implementation = "present_but_disarmed"
provider_execution = "disabled_after_m13_closure"
provider_funding = "owner-reports-available"
providers = "dataforseo-c00-narrowly-validated-no-new-execution"
customer_data = "disabled"
postgres = "disabled-during-db3-planning"
schema_migrations = "planning-only-no-executable-files-or-execution"
api_mcp = "bounded-fixture-prototype-only"
dashboard = "disabled"
strategy_storage = "disabled"
later_database_milestones = "db4-inactive-no-artifacts-separate-owner-gate-required"
mcp_control_plane = "ob-dev-mcp-file-surface-only-no-database-tools"

[tool.unittest]
test_command = "python -m unittest discover -s tests"
