[project]
name = "observatory-c2"
version = "0.0.0"
description = "Local-only C2 Controlled Public Manual Observation Package validation spine for The Observatory."
requires-python = ">=3.11"
dependencies = []

[tool.observatory]
status = "db4-package-preparation-last-trusted-db3"
first_slice = "C2 Controlled Public Manual Observation Package"
probe = "M13 DataForSEO one-shot tooling retained and disarmed"
campaign = "M13 closed; no additional provider request authorized"
campaign_budget_usd = 50
network_implementation = "present_but_disarmed"
provider_execution = "disabled_after_m13_closure"
provider_funding = "owner-reports-available"
providers = "dataforseo-c00-narrowly-validated-no-new-execution"
customer_data = "disabled"
postgres = "disabled-during-db4-package-preparation"
schema_migrations = "package-specification-only-no-executable-files-or-execution"
api_mcp = "bounded-fixture-prototype-only"
dashboard = "disabled"
strategy_storage = "disabled"
later_database_milestones = "db5-inactive-db4-implementation-separate-owner-gate-required"
mcp_control_plane = "ob-dev-current-32-tools-db4-expansion-package-preparation-only"

[tool.unittest]
test_command = "python -m unittest discover -s tests"
